# covid19

./: ._README.rst  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.rst  main.py  main_1.py  plot_intervals.py  run-all.sh  sample.py  solve_ode.py
applications/evidence/: .gitignore  lse.py  main.py  optimize.py  plot_intervals.py  plot_nested.py  plot_propagate.sh  propagate_knested.py  run-all-countries.sh  run-all.sh  run-gui-nested.sh  run-gui.sh  run-hmc-single.sh  run-knested-all-no-lockdown.sh  run-knested-all.sh  run-knested-batch.sh  run-knested-single.sh  run-nested-all-reparam.sh  run-nested-all.sh  run-single.sh  run-tmcmc-single.sh  sample.py  sample_hmc.py  sample_knested.py  sample_nested.py  solve_ode.py
applications/evidence_paper/: .gitignore  countries.sh  fit_country.py  plot_comparison.py  plot_intervals.py  propagate_knested.py  sample_knested.py
applications/gui/: .gitignore  main.py  model.py  plot  plot_intervals_infected.py  run
applications/gui_backend/: README.md  main.py  model.py  plot_effective_growth.py
applications/gui_paper/: README.md  countries.json  countries.py  countrydata.py  load_dehning2020.py  plot_all  plot_comparison.py  plot_effective_growth.py  plot_effective_growth_all.py  plot_effective_growth_nested.py  plot_intervals.py  plot_map.py  plot_posteriors.py  plot_scatter.py  plot_tact.py  plot_tact_actual.py  plot_tint_R0.py  plot_tint_official.py  request_country.py  request_country_europe.py  request_country_paper_release.py  request_country_test.py  table_tact.py  table_tint.py
applications/hierarchical/: main.py  move_plots.py  phase_1.py  phase_2.py  phase_2_sir_int.py  phase_3.py  plot_comparison.py  plot_hierarchical.py  plot_phase_1.py  plot_phase_3.sh  run_hierarchical.sh  sample.py  test_data.py
applications/inference_cantons/: .gitignore  .style.yapf  Makefile  README.md  data.py  main.py  model.py  ode.py  plot  plot.py  run  sei.py
applications/optimization/: .gitignore  optimize.py  run-optimize-batch.sh  run-optimize-single.sh
applications/osp/: .gitignore  get_data.py  main.py  osp.py  post_processing.py  run.sh
applications/rnns/: GP_rnn.py  data.py  main.py  make_synthetic.py  model.py  pytorch_models.py  rnn.py  rnns_new.py  rnns_old.py  run_cases.sh
applications/synthetic/: .gitignore  generate_synthetic_data.sh  generate_synthetic_data_with_deaths.sh  make_synthetic.py  make_synthetic_with_deaths.py  optimize.py  plot_nested.py  run-hmc-single.sh  run-knested-all.sh  run-knested-single.sh  run-mtmcmc-all.sh  run-nested-all.sh  run-nested-sir.sh  run-optimize-all.sh  run-optimize-int.sh  run-optimize-sir.sh  run-optimize.sh  run-sampling-ic.sh  run-sampling-int.sh  run-sampling-sir.sh  run-tmcmc-all.sh  run.sh  run_int.sh  sample.py  sample_hmc.py  sample_knested.py  sample_nested.py  synthetic.py
epidemics/: __init__.py  epidemics.py  ode_solver.py
epidemics/cantons/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  data.py  misc.py  model.py  model_deprecated.py  plot.py  plot_ode.py
epidemics/cantons/data/: README.md  __init__.py  canton_shapes.npy  cantons.dbf  cantons.shp  home_work_people.py  shapefile_to_polygons.py  swiss_cantons.py  swiss_municipalities.py
epidemics/cantons/data/2017/: .gitignore  README.md  gpkg.py  matrix.py  mtx.py  wget
epidemics/cantons/py/: data.py  misc.py  model.py  model_deprecated.py  plot.py  plot_data.py  plot_ode.py  run_model.py  run_osp_cases.py  solver.py  test_solver.py
epidemics/cantons/py/examples/: solve.py
epidemics/cantons/src/: bindings.cpp  common.h  common.hh  data.cpp  data.h  korali_setup.cpp  model.cpp  model.h  model_sei_c.cpp  model_sei_c.h  model_seii_c.cpp  model_seiin.cpp  model_seiin.h  solver.cpp  solver.h  utils.cpp
epidemics/country/: country.py
epidemics/data/: __init__.py  cases.py  combined.py  countries.py  population.py  preprocessor.py  regions.py  swiss_cantons.py  swiss_municipalities.py  synthetic.py
epidemics/misc/: gamma.py  prior.py  prior_D.py  prior_D_wb.py
epidemics/old/: ode_solver.py
epidemics/rnns/: rnns.py
epidemics/seiir/: altone.py  altone_nbin.py  altone_nrm.py  altone_tnrm.py  basic.py  modelBase.py  model_base.py  nbin.py  seiirBase.py
epidemics/seiir0/: nrm.py
epidemics/seiir_cantons/: .gitignore  CMakeLists.txt  Makefile  __init__.py  basic.py  data.py  model.py  plot.py  plot_data.py  plot_ode.py
epidemics/seiir_cantons/data/: README.md  cantons.shx  home_work_people.json  home_work_people.py
epidemics/seiir_cantons/src/: bindings.cpp  korali_setup.cpp  model.cpp  model.h
epidemics/seiir_d/: model_base.py
epidemics/seiir_int/: model_base.py  nbin.py
epidemics/seiird/: altone.py  modelBase.py  model_base.py
epidemics/sir/: altone.py  altone_nbin.py  altone_nrm.py  altone_tnrm.py  basic.py  basic_nbin.py  basic_nrm.py  basic_tnrm.py  modelBase.py  model_base.py  nbin.py  nrm.py  sirBase.py  tnrm.py
epidemics/sir_d/: model_base.py
epidemics/sir_int/: model_base.py  nbin.py  nrm.py  tnrm.py
epidemics/std_models/: std_models.py
epidemics/tools/: autodiff.py  cache.py  database.py  date.py  io.py  nested.py  population_of.py  postprocessing.py  postprocessing_cmaes.py  postprocessing_nested.py  tools.py
epidemics/utils/: autodiff.py  compute_credible_intervals.py  misc.py  plot_comparison.py  plot_comparison_test.py  plot_propagation.py  postprocessing_cmaes.py  postprocessing_nested.py  postprocessing_params.py
hierarchical/: main.py  main_1.py  phase_1.py  phase_2.py  plot_phase_1.py  run_phase_1.sh  test_data.py
osp/: .gitignore  get_data.py  main.py  osp.py  run.sh
osp/plots/: plot_osp_utility.py
rnns/: rnns.py
src/: bindings.cpp  common.cpp  data.cpp  model_seiin.cpp  model_seiin_interventions.cpp  utils.h
src/epidemics/: integrator.h  integrator.hh
tests/: run_all_tests.sh  test_pytorch.py
tests/cpp/: test_autodiff.cpp
tests/py/: common.py  run.sh  test_app_evidence.py  test_app_gui_paper.py  test_app_optimization.py  test_autodiff.py  test_cantons_sei_c.py  test_cantons_seiin.py  test_cantons_seiin_interventions.py  (+7 more)
(+702 files in other folders)
